bootstrap/final-application/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-application
  labels:
    app: example-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-application
  template:
    metadata:
      labels:
        app: example-application
    spec:
      containers:
        - name: eg-app
          image: k3d-registry.localhost:5000/hello-world:stable
          imagePullPolicy: Always
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 3m
              memory: 20Mi
            limits:
              cpu: 10m
              memory: 64Mi
