bootstrap/final-application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-application
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: example-application
