bootstrap/final-application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /workflows-ci-example/(.*)
        pathType: Prefix
        backend:
          service:
            name: example-application
            port:
              number: 80
  tls:
  - hosts:
    - localhost
    secretName: tls.localhost
